--- a/guided_MonteCarloMultiGPU_SYCLMigration/01_dpct_output/CMakeLists.txt
+++ b/guided_MonteCarloMultiGPU_SYCLMigration/01_dpct_output/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(MAX_GPU)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -Xsycl-target-backend '-options -ze-intel-enable-auto-large-GRF-mode' -D MAX_GPU")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -D MAX_GPU")
 else()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl ")
 endif()
