--- a/guided_MonteCarloMultiGPU_SYCLMigration/01_dpct_output/CMakeLists.txt
+++ b/guided_MonteCarloMultiGPU_SYCLMigration/01_dpct_output/CMakeLists.txt
@@ -1,8 +1,14 @@
-if(MAX_GPU)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -D MAX_GPU")
+if(INTEL_MAX_GPU)
+  #To build for Intel® Data Center GPU Max 1550 or 1100
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -D INTEL_MAX_GPU")
+elseif (NVIDIA_GPU)
+  #To build for Nvidia GPU like P100, A100, H100 ...
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=nvptx64-nvidia-cuda -D NVIDIA_GPU")
 else()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl ")
+  #To build for Intel® UHD Graphics, Intel® Gen9, Gen11, Xeon CPU 
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl ")
 endif()
+
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "-pthread ${CMAKE_EXE_LINKER_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "-qmkl ${CMAKE_EXE_LINKER_FLAGS}")
@@ -15,4 +21,5 @@ target_link_libraries(01_dpct_output sycl)
 add_custom_target (run_sm_cpu  cd ${CMAKE_SOURCE_DIR}/01_dpct_output/ && ONEAPI_DEVICE_SELECTOR=opencl:cpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/01_dpct_output)
 add_custom_target (run_sm_gpu  cd ${CMAKE_SOURCE_DIR}/01_dpct_output/ && ONEAPI_DEVICE_SELECTOR=level_zero:gpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/01_dpct_output)
 add_custom_target (run_sm_gpu_opencl  cd ${CMAKE_SOURCE_DIR}/01_dpct_output/ && ONEAPI_DEVICE_SELECTOR=opencl:gpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/01_dpct_output)
+add_custom_target (run_sm_gpu_cuda  cd ${CMAKE_SOURCE_DIR}/01_dpct_output/ && ONEAPI_DEVICE_SELECTOR=cuda:gpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/01_dpct_output)
 
